[package]
name = "survival"
version = "0.1.0"
edition = "2021"

[dependencies]
# All-stars, you all love them, here they are
sdl2 = { version = "0.34.5", features = ["bundled", "ttf", "mixer"], default-features = false }
gl = "*"
nalgebra-glm = "*"
hecs = "*"

# For reading in textures
image = "0.25.1"

# For random numbers
rand = "0.8.4"

# For reading .obj files into meshes
obj-rs = "*"

# For time, lol
chrono = "0.4"